--- a/src/main/resources/fxml/hello-view.fxml
+++ b/src/main/resources/fxml/hello-view.fxml
@@ -31,7 +31,7 @@
                 </LinearGradient>
             </fill>
         </Rectangle>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" height="833.0" layoutX="-4.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="288.0">
+        <Rectangle arcHeight="5.0" arcWidth="5.0" height="833.0" layoutX="-1.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="288.0">
             <fill>
                 <LinearGradient endX="1.0" endY="0.37292161520190026" startX="0.038004750593824244" startY="0.38004750593824227">
                     <stops>
@@ -65,23 +65,16 @@
                 <DropShadow />
             </effect>
         </Button>
-        <Rectangle fx:id="p1_label" arcHeight="5.0" arcWidth="5.0" fill="#443ebc" height="50.0" layoutX="155.0" layoutY="731.0" stroke="WHITE" strokeType="INSIDE" width="98.0" />
-        <Rectangle fx:id="p2_label" arcHeight="5.0" arcWidth="5.0" fill="#443ebc" height="50.0" layoutX="319.0" layoutY="731.0" stroke="WHITE" strokeType="INSIDE" width="98.0" />
-        <Label fx:id="P1_disname" layoutX="180.0" layoutY="747.0" text="Player 1" textFill="WHITE" />
-        <Label fx:id="P2_disname" layoutX="344.0" layoutY="747.0" text="Player 2" textFill="WHITE" />
-        <Rectangle fx:id="p1_top" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="9.0" layoutX="155.0" layoutY="731.0" stroke="BLACK" strokeType="INSIDE" width="94.0" />
+        <Rectangle fx:id="p1_label" arcHeight="5.0" arcWidth="5.0" fill="#443ebc" height="50.0" layoutX="155.0" layoutY="731.0" stroke="WHITE" strokeType="INSIDE" width="108.0" />
+        <Rectangle fx:id="p2_label" arcHeight="5.0" arcWidth="5.0" fill="#443ebc" height="50.0" layoutX="310.0" layoutY="731.0" stroke="WHITE" strokeType="INSIDE" width="107.0" />
+        <Label fx:id="P1_disname" layoutX="186.0" layoutY="747.0" text="Player 1" textFill="WHITE" />
+        <Label fx:id="P2_disname" layoutX="340.0" layoutY="747.0" text="Player 2" textFill="WHITE" />
+        <Rectangle fx:id="p1_top" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="9.0" layoutX="155.0" layoutY="731.0" stroke="BLACK" strokeType="INSIDE" width="101.0" />
         <Rectangle fx:id="p2_top" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="9.0" layoutX="317.0" layoutY="731.0" stroke="BLACK" strokeType="INSIDE" width="94.0" />
-        <Rectangle fx:id="p1_bottom" arcHeight="5.0" arcWidth="5.0" fill="#844ed3" height="9.0" layoutX="157.0" layoutY="772.0" stroke="BLACK" strokeType="INSIDE" width="94.0" />
-        <Rectangle fx:id="p2_bottom" arcHeight="5.0" arcWidth="5.0" fill="#844ed3" height="9.0" layoutX="319.0" layoutY="772.0" stroke="BLACK" strokeType="INSIDE" width="94.0" />
-        <ImageView fx:id="dice_img" fitHeight="85.0" fitWidth="81.0" layoutX="243.0" layoutY="713.0" style="-fx-background-radius: 5px">
-            <image>
-                <Image url="@../images/six_dice.png" />
-            </image>
-        </ImageView>
-        <Rectangle arcHeight="10.0" arcWidth="10.0" fill="TRANSPARENT" height="88.0" layoutX="241.0" layoutY="712.0" stroke="#2626b9" strokeType="INSIDE" strokeWidth="6.0" width="85.0" />
-        <Button fx:id="dice" layoutX="243.0" layoutY="713.0" mnemonicParsing="false" onMouseClicked="#playDice" prefHeight="85.0" prefWidth="80.0" style="-fx-background-color: transparent; -fx-background-radius: 5px;" textFill="BLACK" />
-        <Rectangle fx:id="p1_bg" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="65.0" layoutX="101.0" layoutY="724.0" stroke="#e4da19" strokeType="INSIDE" strokeWidth="5.0" width="65.0" />
-        <Rectangle fx:id="p2_bg" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="65.0" layoutX="405.0" layoutY="724.0" stroke="#e4da19" strokeType="INSIDE" strokeWidth="5.0" width="65.0" />
+        <Rectangle fx:id="p1_bottom" arcHeight="5.0" arcWidth="5.0" fill="#844ed3" height="9.0" layoutX="157.0" layoutY="772.0" stroke="BLACK" strokeType="INSIDE" width="101.0" />
+        <Rectangle fx:id="p2_bottom" arcHeight="5.0" arcWidth="5.0" fill="#844ed3" height="9.0" layoutX="312.0" layoutY="772.0" stroke="BLACK" strokeType="INSIDE" width="101.0" />
+        <Rectangle fx:id="p1_bg" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="58.0" layoutX="105.0" layoutY="727.0" stroke="#e4da19" strokeType="INSIDE" strokeWidth="5.0" width="58.0" />
+        <Rectangle fx:id="p2_bg" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="58.0" layoutX="409.0" layoutY="726.0" stroke="#e4da19" strokeType="INSIDE" strokeWidth="5.0" width="58.0" />
         <Button layoutX="121.0" layoutY="743.0" mnemonicParsing="false" style="-fx-background-color: #0f1fae; -fx-background-radius: 5em; -fx-min-width: 25px; -fx-max-width: 25px; -fx-min-height: 25px; -fx-max-height: 25px;" text="Button">
             <effect>
                 <DropShadow />
@@ -93,5 +86,16 @@
             </effect>
         </Button>
         <Label fx:id="diceval" layoutX="357.0" layoutY="800.0" text="Dice" />
+      <ImageView fx:id="dice_img" fitHeight="74.0" fitWidth="74.0" layoutX="247.0" layoutY="719.0">
+         <image>
+            <Image url="@../images/six_dice.png" />
+         </image>
+      </ImageView>
+        <Button fx:id="dice" layoutX="248.0" layoutY="718.0" mnemonicParsing="false" onMouseClicked="#playDice" prefHeight="74.0" prefWidth="72.0" style="-fx-background-color: transparent; -fx-background-radius: 5px;" textFill="BLACK" />
+      <ImageView fx:id="arrow" fitHeight="54.0" fitWidth="47.0" layoutX="261.0" layoutY="669.0">
+         <image>
+            <Image url="@../images/arrow.png" />
+         </image>
+      </ImageView>
     </children>
 </Pane>
